Use the flow of the linebox's containing block when placing ellipsis

This was a regression I introduced in crrev.com/2611233002- restore the old
behaviour by referencing the flow of the linebox's containing block rather than
its potentially inline container.

BUG=688957
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2681913002
Cr-Commit-Position: refs/heads/master@{#449151}

Former-commit-id: d38d6d4342779d08233a32c8c70b835fe3e6b96f